// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should correctly render component Title with props 1`] = `
<h1
  className="title"
>
  Test title
</h1>
`;

exports[`<Title /> should correctly render component Title without props 1`] = `
<h1
  className="title"
>
  Simple title
</h1>
`;
